--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ sudo: false
 cache: bundler
 before_install: gem install bundler
 script:
+- bundle exec rake bundle:audit
 - bundle exec rubocop
 - bundle exec rspec
