[ci] specify postgresql version

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ sudo: false
 cache: bundler
 services:
   - postgresql
+addons:
+  postgresql: "10"
 before_install: gem install bundler
 script:
 - mkdir log
