rubocop PLEASE USE ALIAS_METHOD BY DEFAULT!!! STOP THIS s***

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,7 @@ AllCops:
     - Gemfile
     - Rakefile
     - table_sync.gemspec
+
+Style/Alias:
+  Enabled: true
+  EnforcedStyle: prefer_alias_method
