--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
 
+rvm: 
+  - 2.5
+  - 2.6
+  - 2.7
+  - ruby-head
+
 matrix:
   fast_finish: true
-  include:
-    - rvm: 2.3
-    - rvm: 2.4
-    - rvm: 2.5
-    - rvm: 2.6
-    - rvm: ruby-head
   allow_failures:
     - rvm: ruby-head
 
