Update the logic according to the discussions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,3 +39,7 @@ Style/MissingRespondToMissing:
 Style/HashConversion:
   Exclude:
     - spec/**/*
+
+Style/OpenStructUse:
+  Exclude:
+    - spec/**/*
