--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.5", "2.6", "2.7", "3.0"]
+        ruby: ["2.7", "3.0", "3.1"]
 
     name: ${{ matrix.ruby }}
 
@@ -47,6 +47,6 @@ jobs:
     - run: bundle exec rubocop
     - run: bundle exec rspec
 
-    - uses: coverallsapp/github-action@v1.1.2
+    - uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
