--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ inherit_gem:
   rubocop-config-umbrellio: lib/rubocop.yml
 
 AllCops:
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 2.7
   Include:
     - bin/*
     - lib/**/*.rb
@@ -35,3 +35,14 @@ Lint/MissingSuper:
 
 Style/MissingRespondToMissing:
   Enabled: false
+
+Style/HashConversion:
+  Exclude:
+    - spec/**/*
+
+Style/OpenStructUse:
+  Exclude:
+    - spec/**/*
+
+RSpec/PendingWithoutReason:
+  Enabled: false # Many false positives
